--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
             <div class="led green"></div>
         </div>
         <div class="display powerOff">
+
             <div class="listPokemons">
 
             </div>
@@ -28,7 +29,7 @@
         <div class="displayDir">
 
         </div>
-
+        <img class="imgBtnPower" src="/155491.svg" alt="">
         <button class="btnReset"></button>
         <button class="btnPower"></button>
         <button class="btnDir cim "></button>
