--- a/index.html
+++ b/index.html
@@ -30,6 +30,10 @@
 
         </div>
         <img class="imgBtnPower" src="/155491.svg" alt="">
+        <img class="imgDir cima " src="/directionaldownarrow_85729.svg" alt="">
+        <img class="imgDir baixo" src="/directionaldownarrow_85729.svg" alt="">
+        <img class="imgDir direita" src="/directionaldownarrow_85729.svg" alt="">
+        <img class="imgDir esquerda" src="/directionaldownarrow_85729.svg" alt="">
         <button class="btnReset"></button>
         <button class="btnPower"></button>
         <button class="btnDir cim "></button>
