--- a/index.html
+++ b/index.html
@@ -29,6 +29,7 @@
         <div class="displayDir">
 
         </div>
+        <img class="imgRetorno" src="/reload-webpage_icon-icons.com_53905.svg" alt="">
         <img class="imgBtnPower" src="/155491.svg" alt="">
         <img class="imgDir cima " src="/directionaldownarrow_85729.svg" alt="">
         <img class="imgDir baixo" src="/directionaldownarrow_85729.svg" alt="">
