--- a/index.html
+++ b/index.html
@@ -29,14 +29,16 @@
         </div>
 
         <div class="displayDir">
-            <ol id="listAttribute">
-                <li class="descriptionPoke desligado">
-                    <span class="id">#001</span>
-                    <span class="name">Nome :</span>
-                    <span class="type">Tipo :</span>
-                    <span class="reaction">Ataque:</span>
-                </li>
-            </ol>
+
+            <div class="descriptionPoke desligado">
+                <div class="id"></div>
+                <div class="name"></div>
+                <div class="type"></div>
+                <div class="reaction">
+
+                </div>
+            </div>
+
         </div>
         <img class="imgRetorno" src="/imagens/reload-webpage_icon-icons.com_53905.svg" alt="">
         <img class="imgBtnPower" src="/imagens/155491.svg" alt="">
@@ -51,9 +53,9 @@
         <button class="btnDir esq"></button>
         <button class="btnDir dir"></button>
     </div>
-    <script src="/js/main.js"></script>
     <script src="/js/api-Poke.js"></script>
-    <script src="/js/model.js"></script>
+    <script src="/js/main.js"></script>
+
 </body>
 
 </html>
